--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,9 +1,15 @@
 container_commands:
-  01_migrate:
+  01_syncdb:
+    command: "django-admin.py syncdb --migrate --noinput"
+    leader_only: true
+  02_migrate:
     command: "python manage.py migrate"
     leader_only: true
-  02_collectstatic:
+  03_collectstatic:
     command: "python manage.py collectstatic --noinput"
+  04_createsu:
+    command: "python manage.py createsu"
+    leader_only: true
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
