--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,13 +1,13 @@
 container_commands:
-  01_syncdb:
-    command: "django-admin.py syncdb --migrate --noinput"
-    leader_only: true
-  02_migrate:
+%%  01_syncdb:
+%%    command: "django-admin.py syncdb --migrate --noinput"
+%%    leader_only: true
+  01_migrate:
     command: "python manage.py migrate"
     leader_only: true
-  03_collectstatic:
+  02_collectstatic:
     command: "python manage.py collectstatic --noinput"
-  04_createsu:
+  03_createsu:
     command: "python manage.py createsu"
     leader_only: true
 
