--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,13 +1,13 @@
 branch-defaults:
   master:
-    environment: groot-dev
+    environment: null
     group_suffix: null
 global:
-  application_name: groot
+  application_name: Portal
   branch: null
-  default_ec2_keyname: aws-eb3
+  default_ec2_keyname: aws-eb
   default_platform: Python 3.6
-  default_region: us-west-2
+  default_region: ca-central-1
   include_git_submodules: true
   instance_profile: null
   platform_name: null
