--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,14 @@ Django==2.0.4
 django-auth-ldap==1.5.0
 django-extensions==2.0.7
 django-grappelli==2.11.1
+django-python3-ldap==0.11.1
+dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.14
 idna==2.6
 Jinja2==2.10
 jmespath==0.9.3
+ldap3==2.3
 MarkupSafe==1.0
 pathspec==0.5.5
 pipenv==11.10.4
@@ -31,4 +34,7 @@ six==1.11.0
 tabulate==0.7.5
 termcolor==1.1.0
 urllib3==1.22
+virtualenv==15.2.0
+virtualenv-clone==0.3.0
+virtualenvwrapper-win==1.2.5
 websocket-client==0.47.0
