--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ django-auth-ldap==1.5.0
 django-extensions==2.0.7
 django-grappelli==2.11.1
 django-python3-ldap==0.11.1
+docker==2.6.1
+docker-pycreds==0.2.3
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.14
