--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ MarkupSafe==1.0
 pathspec==0.5.5
 pipenv==11.10.4
 psycopg2==2.7.4
+psycopg2-binary==2.7.4
 pyasn1==0.3.2
 pyasn1-modules==0.2.1
 python-dateutil==2.7.2
