--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ urllib3==1.22
 virtualenv==15.2.0
 virtualenv-clone==0.3.0
 virtualenvwrapper-win==1.2.5
+django-auth-ldap==1.5.0
 django-python3-ldap==0.11.1
 
 
