--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,6 @@ virtualenv-clone==0.3.0
 virtualenvwrapper-win==1.2.5
 django-auth-ldap==1.5.0
 django-python3-ldap==0.11.1
+python-ldap==3.1.0
 
 
