--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -19,9 +19,10 @@ option_settings:
 
 packages:
   yum:
+    gcc: []
+    gcc-c++: []
     postgresql95-devel: []
     python36-devel: []
-    libldap2-dev: []
-    libsasl2-dev: []
+
 
 
