--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -8,6 +8,12 @@ container_commands:
   03_createsu:
     command: "python manage.py createsu"
     leader_only: true
+  04_install_package:
+    command: "/opt/python/run/venv/bin/pip install python-ldap"
+    leader_only: true
+  05_install_package2:
+    command: "/opt/python/run/venv/bin/pip install django-python3-ldap"
+    leader_only: true
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
