--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -9,10 +9,10 @@ container_commands:
     command: "python manage.py createsu"
     leader_only: true
   04_install_package:
-    command: "/opt/python/run/venv/bin/pip install python-ldap"
+    command: "/opt/python/run/venv/bin/pip --upgrade setuptools"
     leader_only: true
   05_install_package2:
-    command: "/opt/python/run/venv/bin/pip install django-python3-ldap"
+    command: "/opt/python/run/venv/bin/pip install python-ldap"
     leader_only: true
 
 option_settings:
