--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ virtualenv-clone==0.3.0
 virtualenvwrapper-win==1.2.5
 django-python3-ldap==0.11.1
 python3-ldap==0.9.8.4
+django-auth-ldap==1.5.0
 
 
 
