--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -8,9 +8,9 @@ container_commands:
   03_createsu:
     command: "python manage.py createsu"
     leader_only: true
-  03_syncuser:
-    command: "python manage.py ldap_sync_users"
-    leader_only: true
+%%  03_syncuser:
+%%    command: "python manage.py ldap_sync_users"
+%%    leader_only: true
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
@@ -22,6 +22,7 @@ option_settings:
 
 packages:
   yum:
+    openldap-devel: []
     gcc: []
     gcc-c++: []
     postgresql95-devel: []
