--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -8,6 +8,10 @@ container_commands:
   03_createsu:
     command: "python manage.py createsu"
     leader_only: true
+  03_sync:
+    command: "python manage.py ldap_sync_users"
+    leader_only: true
+
 
 
 option_settings:
