--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,43 @@
+awsebcli==3.12.4
+botocore==1.10.16
+cement==2.8.2
 certifi==2018.4.16
 chardet==3.0.4
+click==6.7
+colorama==0.3.7
+container-transform==1.1.5
 Django==2.0.4
+django-auth-ldap==1.5.0
 django-extensions==2.0.7
 django-grappelli==2.11.1
+django-python3-ldap==0.11.1
+docker==2.6.1
+docker-pycreds==0.2.3
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.14
 idna==2.6
-pipenv==11.10.1
+Jinja2==2.10
+jmespath==0.9.3
+ldap3==2.3
+MarkupSafe==1.0
+pathspec==0.5.5
+pipenv==11.10.4
 psycopg2==2.7.4
-pyasn1==0.4.2
+psycopg2-binary==2.7.4
+pyasn1==0.3.2
 pyasn1-modules==0.2.1
+python-dateutil==2.7.2
+python-ldap==3.0.0
 pytz==2018.4
-requests==2.18.4
+PyYAML==3.12
+requests==2.9.1
+semantic-version==2.5.0
 six==1.11.0
+tabulate==0.7.5
+termcolor==1.1.0
 urllib3==1.22
 virtualenv==15.2.0
 virtualenv-clone==0.3.0
 virtualenvwrapper-win==1.2.5
-django-python3-ldap==0.11.1
-python-ldap==3.0.0
-django-auth-ldap==1.5.0
-ldap3==2.3
+websocket-client==0.47.0
