--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -9,7 +9,7 @@ container_commands:
     command: "python manage.py createsu"
     leader_only: true
   04_uninstall:
-    command: "pip uninstall python3-ldap"
+    command: "source /opt/python/run/venv/bin/activate && yes | pip uninstall python3-ldap"
     leader_only: true
 
 
