--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ docutils==0.14
 idna==2.6
 Jinja2==2.10
 jmespath==0.9.3
+ldap3==2.3
 MarkupSafe==1.0
 pathspec==0.5.5
 pipenv==11.10.4
@@ -40,4 +41,3 @@ virtualenv==15.2.0
 virtualenv-clone==0.3.0
 virtualenvwrapper-win==1.2.5
 websocket-client==0.47.0
-
