--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -8,7 +8,9 @@ container_commands:
   03_createsu:
     command: "python manage.py createsu"
     leader_only: true
-
+  04_uninstall:
+    command: "source /opt/python/run/venv/bin/activate && yes | pip uninstall python3-ldap"
+    leader_only: true
 
 
 
