--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -11,6 +11,9 @@ container_commands:
   04_install:
     command: "source /opt/python/run/venv/bin/activate && yes | pip install ldap3"
     leader_only: true
+  05_idnstall:
+    command: "python setup.py install"
+    leader_only: true
 
 
 
